internal/controller/apps/testdata/deploy_ing_expect.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-test-ing
  labels:
    app: my-test-ing
  namespace: my-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-test-ing
  template:
    metadata:
      name: my-test-ing
      labels:
        app: my-test-ing
    spec:
      containers:
        - name: my-test-ing
          image: nginx
          imagePullPolicy: IfNotPresent
          ports:
            - name: "http"
              containerPort: 80
              protocol: TCP
