internal/controller/apps/testdata/deploy_np_expect.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-test-np
  labels:
    app: my-test-np
    owner: xin_yan
  namespace: my-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-test-np
  template:
    metadata:
      name: my-test-np
      labels:
        app: my-test-np
        owner: xin_yan
    spec:
      containers:
        - name: my-test-np
          image: nginx
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
