internal/controller/apps/testdata/svc_ing_expect.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-test-ing
  namespace: my-test
  labels:
    app: my-test-ing
spec:
  selector:
    app: my-test-ing
  ports:
    - protocol: TCP
      port: 80
      targetPort: "http"
  type: ClusterIP
