internal/controller/apps/testdata/svc_np_expect.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-test-np
  namespace: my-test
  labels:
    app: my-test-np
    owner: xin_yan
spec:
  selector:
    app: my-test-np
  ports:
    - protocol: TCP
      port: 80
      nodePort: 30006
      targetPort: "http"
  type: NodePort
