internal/controller/apps/testdata/ing_expect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-test-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: www.nginx-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-test-ing
                port:
                  number: 80
